--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "resolve-url-loader": "^3.1.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "jquery": "^3.5.1"
     }
 }
